Added journey action to swagger.
