# app/Http/Controllers/JourneyActionController.php
@@ -12,6 +12,42 @@ use Illuminate\Http\Request;
 class JourneyActionController extends Controller
 {
     /**
+     * @OA\Get(
+     *  path="/journey/{journey}/activity/{activity}/action",
+     *  summary="List actions",
+     *  description="Get a list of all actions of a journey activity.",
+     *  operationId="journeyActionList",
+     *  tags={"journeyAction"},
+     *  @OA\Parameter(
+     *      name="journey",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="activity",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="Success",
+     *      @OA\JsonContent(
+     *          type="array",
+     *          @OA\Items(ref="#/components/schemas/JourneyAction"),
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="The journey or activity does not exist.",
+     *  ),
+     * )
+     * 
      * Display a listing of the resource.
      *
      * @return \Illuminate\Http\Response
@@ -29,6 +65,79 @@ class JourneyActionController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *  path="/journey/{journey}/activity/{activity}/action",
+     *  summary="Create activity",
+     *  description="Create a new action for the journey activity.",
+     *  operationId="journeyActionCreate",
+     *  tags={"journeyAction"},
+     *  @OA\Parameter(
+     *      name="journey",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="activity",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="action_id",
+     *      description="The reference to the action the user starts.",
+     *      required=true,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="started_at",
+     *      description="The date and time the action was started.",
+     *      required=false,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="date",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="status_id",
+     *      description="The reference to the status of the action.",
+     *      required=true,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="input_id",
+     *      description="The reference to the input attached to the action.",
+     *      required=false,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="Success",
+     *      @OA\JsonContent(ref="#/components/schemas/JourneyAction"),
+     *  ),
+     *  @OA\Response(
+     *      response=422,
+     *      description="The entered parameters are not valid.",
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="The journey or activity does not exist.",
+     *  ),
+     * )
+     * 
      * Store a newly created resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
@@ -62,6 +171,47 @@ class JourneyActionController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *  path="/journey/{journey}/activity/{activity}/action/{id}",
+     *  summary="Show action",
+     *  description="Get a single action from a journey activity by id.",
+     *  operationId="journeyActionShow",
+     *  tags={"journeyAction"},
+     *  @OA\Parameter(
+     *      name="journey",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="activity",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="id",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="Success",
+     *      @OA\JsonContent(ref="#/components/schemas/JourneyAction"),
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="The journey, activity or action does not exist.",
+     *  ),
+     * )
+     * 
      * Display the specified resource.
      *
      * @param  int  $id
@@ -81,6 +231,87 @@ class JourneyActionController extends Controller
     }
 
     /**
+     * @OA\Patch(
+     *  path="/journey/{journey}/activity/{activity}/action/{id}",
+     *  summary="Update action",
+     *  description="Update an existing action of a journey activity.",
+     *  operationId="journeyActionUpdate",
+     *  tags={"journeyAction"},
+     *  @OA\Parameter(
+     *      name="journey",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="activity",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="id",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="action_id",
+     *      description="The reference to the action the user starts.",
+     *      required=false,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="started_at",
+     *      description="The date and time the action was started.",
+     *      required=false,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="date",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="status_id",
+     *      description="The reference to the status of the action.",
+     *      required=false,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="input_id",
+     *      description="The reference to the input attached to the action.",
+     *      required=false,
+     *      in="query",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="Success",
+     *      @OA\JsonContent(ref="#/components/schemas/JourneyAction"),
+     *  ),
+     *  @OA\Response(
+     *      response=422,
+     *      description="The entered parameters are not valid.",
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="The journey, activity or action does not exist.",
+     *  ),
+     * )
+     * 
      * Update the specified resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
@@ -114,6 +345,46 @@ class JourneyActionController extends Controller
     }
 
     /**
+     * @OA\Delete(
+     *  path="/journey/{journey}/activity/{activity}/action/{id}",
+     *  summary="Delete action",
+     *  description="Delete an action of a journey activity.",
+     *  operationId="journeyActionDelete",
+     *  tags={"journeyAction"},
+     *  @OA\Parameter(
+     *      name="journey",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="activity",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Parameter(
+     *      name="id",
+     *      required=true,
+     *      in="path",
+     *      @OA\Schema(
+     *          type="integer",
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="Success",
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="The journey, activity or action does not exist.",
+     *  ),
+     * )
+     * 
      * Remove the specified resource from storage.
      *
      * @param  int  $id
